--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.2.1",
-    "expo": "~38.0.8",
-    "expo-font": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "@react-native-community/masked-view": "^0.1.10",
+    "expo": "38.0.8",
+    "expo-status-bar": "~1.0.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-screens": "^2.7.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.3.7",
+    "react-navigation-stack": "^2.3.13",
+    "react-native-safe-area-context": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
